# lite_dist2

./: .gitignore  CHANGELOG.md  Dockerfile  README.ja.md  README.md  check.bat  docker-compose.yml  pyproject.toml  release.bat  release.sh  ruff.toml  ty.toml
docker_example/: run_management.py  run_table.py  run_worker.py
example/: generate_hash_preimage.py  generate_mandelbrot_set.py  generate_mandelbrot_set_semi_auto.py  implemented_runner.py
src/lite_dist2/: __init__.py  api.py  common.py  config.py  curriculum.py  expections.py  interfaces.py  response_models.py  start_table_api.py  study.py  study_storage.py  table_param.py  trial.py  trial_runner.py  trial_table.py  type_definitions.py
src/lite_dist2/curriculum_models/: curriculum.py  mapping.py  progress_summary.py  study.py  study_portables.py  study_registry.py  study_status.py  study_storage.py  trial.py  trial_table.py
src/lite_dist2/study_strategies/: __init__.py  all_calculation_study_strategy.py  base_study_strategy.py  find_exact_study_strategy.py  study_strategy_factory.py
src/lite_dist2/suggest_strategies/: __init__.py  base_suggest_strategy.py  sequential_suggest_strategy.py
src/lite_dist2/table_node_api/: api.py  start_table_api.py  table_param.py  table_response.py
src/lite_dist2/trial_repositories/: base_trial_repository.py  normal_trial_repository.py  trial_repository.py  trial_repository_factory.py  trial_repository_model.py
src/lite_dist2/value_models/: aligned_space.py  aligned_space_registry.py  base_space.py  const_param.py  jagged_space.py  line_segment.py  parameter_aligned_space_helper.py  point.py  protocols.py  space.py  space_model.py  space_type.py
src/lite_dist2/worker_node/: table_node_client.py  trial_runner.py  worker.py
tests/: const.py  test_common.py  test_curriculum.py  test_study.py  test_trial.py  test_trial_table.py
tests/curriculum_models/: test_curriculum.py  test_mapping.py  test_progress_summary.py  test_study.py  test_study_portables.py  test_study_registry.py  test_trial.py  test_trial_table.py
tests/study_strategy/: all_calculation_study_strategy.py  test_all_calculation_study_strategy.py  test_find_exact_study_strategy.py
tests/suggest_strategies/: test_sequential_suggest_strategy.py
tests/trial_repositories/: test_normal_trial_repository.py
tests/value_models/: test_aligned_space.py  test_const_param.py  test_jagged_space.py  test_line_segment.py  test_parameter_aligned_space_helper.py  test_point.py  test_space.py
