[project]
name = "lite-dist2"
version = "0.6.0"
description = "Distributed processing system"
readme = "README.md"
authors = [
    { name = "Justica", email = "atsuronreplaced@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
    "uvicorn>=0.41.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: System :: Distributed Computing"
]

[project.urls]
Repository = "https://github.com/atsuhiron/lite_dist2.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.16.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[project.scripts]
start-table = "lite_dist2.table_node_api.start_table_api:start"

[tool.coverage.paths]
source = [
    "src/"
]
[tool.coverage.report]
skip_empty = true
