[project]
name = "lite-dist2"
version = "0.6.5"
description = "Distributed processing system"
readme = "README.md"
authors = [
    { name = "Justica", email = "atsuronreplaced@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.4",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
    "uvicorn>=0.44.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: System :: Distributed Computing"
]

[project.urls]
Repository = "https://github.com/atsuhiron/lite_dist2.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.16.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]

[project.scripts]
start-table = "lite_dist2.table_node_api.start_table_api:start"

[tool.coverage.paths]
source = [
    "src/"
]
[tool.coverage.report]
skip_empty = true
